tests/parser/positive/nested_blocks.nv
fn main() : void {
    {
        let x : int = 1;
        {
            x;
        }
    }
    return;
}
