tests/parser/negative/malformed_call_args.nv
fn main() : void {
    foo(,x);
    return;
}
